--- a/docs/resources/appendix/action-hash-abis.mdx
+++ b/docs/resources/appendix/action-hash-abis.mdx
@@ -5,6 +5,24 @@ sidebarTitle: "Action ABI Reference"
 
 This document contains the ABI structures for all Actions, taken from their respective `hash` functions. Use these to properly encode Action arguments when forming EIP-712 hashes.
 
+## DeactivateInstruction
+
+```typescript
+const deactivateInstructionAbi = [
+  { name: 'instructionId', type: 'bytes32' },
+  { 
+    name: 'fee', 
+    type: 'tuple',
+    components: [
+      { name: 'token', type: 'address' },
+      { name: 'maxBaseFeePerGas', type: 'uint256' },
+      { name: 'maxPriorityFeePerGas', type: 'uint256' },
+      { name: 'executionFee', type: 'uint256' }
+    ]
+  }
+] as const
+```
+
 ## Refuel
 
 ```typescript
@@ -34,6 +52,96 @@ const refuelERC20Abi = [
   { name: 'target', type: 'address' },
   { name: 'threshold', type: 'uint256' },
   { name: 'endBalance', type: 'uint256' },
+  { 
+    name: 'fee', 
+    type: 'tuple',
+    components: [
+      { name: 'token', type: 'address' },
+      { name: 'maxBaseFeePerGas', type: 'uint256' },
+      { name: 'maxPriorityFeePerGas', type: 'uint256' },
+      { name: 'executionFee', type: 'uint256' }
+    ]
+  }
+] as const
+```
+
+## Sweep
+
+```typescript
+const sweepAbi = [
+  { name: 'target', type: 'address' },
+  { name: 'threshold', type: 'uint256' },
+  { name: 'endBalance', type: 'uint256' },
+  { name: 'gasLimit', type: 'uint256' },
+  { 
+    name: 'fee', 
+    type: 'tuple',
+    components: [
+      { name: 'token', type: 'address' },
+      { name: 'maxBaseFeePerGas', type: 'uint256' },
+      { name: 'maxPriorityFeePerGas', type: 'uint256' },
+      { name: 'executionFee', type: 'uint256' }
+    ]
+  }
+] as const
+```
+
+## SweepCCTP
+
+```typescript
+const sweepCCTPAbi = [
+  { name: 'token', type: 'address' },
+  { name: 'destinationDomain', type: 'uint32' },
+  { name: 'destinationMintRecipient', type: 'bytes32' },
+  { name: 'threshold', type: 'uint256' },
+  { name: 'endBalance', type: 'uint256' },
+  { 
+    name: 'fee', 
+    type: 'tuple',
+    components: [
+      { name: 'token', type: 'address' },
+      { name: 'maxBaseFeePerGas', type: 'uint256' },
+      { name: 'maxPriorityFeePerGas', type: 'uint256' },
+      { name: 'executionFee', type: 'uint256' }
+    ]
+  }
+] as const
+```
+
+## SweepERC20
+
+```typescript
+const sweepERC20Abi = [
+  { name: 'target', type: 'address' },
+  { name: 'token', type: 'address' },
+  { name: 'threshold', type: 'uint256' },
+  { name: 'endBalance', type: 'uint256' },
+  { 
+    name: 'fee', 
+    type: 'tuple',
+    components: [
+      { name: 'token', type: 'address' },
+      { name: 'maxBaseFeePerGas', type: 'uint256' },
+      { name: 'maxPriorityFeePerGas', type: 'uint256' },
+      { name: 'executionFee', type: 'uint256' }
+    ]
+  }
+] as const
+```
+
+## SweepUniswapV3
+
+```typescript
+const sweepUniswapV3Abi = [
+  { name: 'recipient', type: 'address' },
+  { name: 'tokenIn', type: 'address' },
+  { name: 'tokenOut', type: 'address' },
+  { name: 'feeTier', type: 'uint24' },
+  { name: 'threshold', type: 'uint256' },
+  { name: 'endBalance', type: 'uint256' },
+  { name: 'floorAmountOut', type: 'uint256' },
+  { name: 'meanPriceLookBack', type: 'uint32' },
+  { name: 'maxPriceDeviationBPS', type: 'uint32' },
   { 
     name: 'fee', 
     type: 'tuple',
@@ -77,13 +185,14 @@ const transferAbi = [
 ] as const
 ```
 
-## TransferERC20
+## TransferCCTP
 
 ```typescript
-const transferERC20Abi = [
+const transferCCTPAbi = [
   { name: 'token', type: 'address' },
-  { name: 'target', type: 'address' },
-  { name: 'value', type: 'uint256' },
+  { name: 'amount', type: 'uint256' },
+  { name: 'destinationDomain', type: 'uint32' },
+  { name: 'destinationMintRecipient', type: 'bytes32' },
   { 
     name: 'schedule', 
     type: 'tuple',
@@ -107,34 +216,23 @@ const transferERC20Abi = [
 ] as const
 ```
 
-## SweepDepositAccount
+## TransferERC20
 
 ```typescript
-const sweepDepositAccountAbi = [
-  { name: 'depositor', type: 'address' },
-  { name: 'recipient', type: 'address' },
-  { name: 'threshold', type: 'uint256' },
+const transferERC20Abi = [
+  { name: 'token', type: 'address' },
+  { name: 'target', type: 'address' },
+  { name: 'value', type: 'uint256' },
   { 
-    name: 'fee', 
+    name: 'schedule', 
     type: 'tuple',
     components: [
-      { name: 'token', type: 'address' },
-      { name: 'maxBaseFeePerGas', type: 'uint256' },
-      { name: 'maxPriorityFeePerGas', type: 'uint256' },
-      { name: 'executionFee', type: 'uint256' }
+      { name: 'startAt', type: 'uint256' },
+      { name: 'startBy', type: 'uint256' },
+      { name: 'interval', type: 'uint256' },
+      { name: 'timeout', type: 'uint256' }
     ]
-  }
-] as const
-```
-
-## SweepDepositAccountERC20
-
-```typescript
-const sweepDepositAccountERC20Abi = [
-  { name: 'token', type: 'address' },
-  { name: 'depositor', type: 'address' },
-  { name: 'recipient', type: 'address' },
-  { name: 'threshold', type: 'uint256' },
+  },
   { 
     name: 'fee', 
     type: 'tuple',
