--- a/sdk/overview.mdx
+++ b/sdk/overview.mdx
@@ -12,8 +12,10 @@ The Otim SDK provides a complete toolkit for integrating Otim’s smart orchestr
 </Card>
 
 Dive in one of Otim's SDKs depending on your product stack:
-<Card title="TypeScript Server-Side" icon="code" href="/sdk/typescript-server-side/installation">
-  Get step-by-step walkthroughs on how to implement key interactions with the Otim OS.
-</Card>
+
+<CardGroup cols={2}>
+  <Card title="Go" icon="golang" iconType="brands" href="/sdk/go/installation"></Card>
+  <Card title="TypeScript Server-Side" icon="code" href="/sdk/typescript-server-side/installation"></Card>
+</CardGroup>
 
 Want to just jump right in with some quickstart sandboxes? Check out the [Otim Playground](https://github.com/otimlabs/otim-playground) GitHub repository to find every developer example you may need.
